--- a/tianana-app/src/app/home/home.component.css
+++ b/tianana-app/src/app/home/home.component.css
@@ -25,7 +25,58 @@
     z-index: 1px;
 }
 
-@media only screen and (max-width: 600px) {
+/* Produtos */
+
+.pr-card-bg{
+    color: white;
+    font-size: 5.5rem;
+    position: absolute;
+    margin-left: -10%;
+    bottom: 2vw;
+    z-index: 0;
+}
+
+.pr-card-image {
+    position: absolute;
+    padding-top: 45px;
+    margin-right: 50px;
+    height: 23vw;
+    z-index: 2;
+}
+.pr-card-image:hover {
+    height: 28vw;
+}
+
+.pr-card-name {
+    position: absolute;
+    top: 5px;
+    margin-left: 10px;
+    z-index: 1;
+}
+
+.pr-card-price {
+    position: absolute;
+    margin-left: 10px;
+    bottom: 5px;
+    z-index: 1;
+}
+
+.card-prod {
+    position: relative;
+    margin: 30px 4%;
+    border-radius: 10px;
+    background-color: #e8eef3;
+    
+}
+.card-pro {
+    height: 30vw;
+    position: relative;
+    margin: 30px 5%;
+    
+}
+
+
+@media only screen and (max-width: 770px) {
     .home-main { 
         height: 100vw; 
     }
