--- a/tianana-app/src/app/header/header.component.html
+++ b/tianana-app/src/app/header/header.component.html
@@ -5,8 +5,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" routerLink="/products">Products</a>
+        <a class="nav-link" routerLink="/home">Início <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/products">Produtos</a>
         <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
