--- a/tianana-app/src/app/home/home.component.css
+++ b/tianana-app/src/app/home/home.component.css
@@ -48,13 +48,28 @@
 }
 
 .pr-card-name {
+    color: #8ac926;
     position: absolute;
     top: 5px;
     margin-left: 10px;
     z-index: 1;
 }
 
+.pr-card-share {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 1;
+}
+
+.pr-card-share a {
+    font-size: 2rem;
+    color: white;
+    text-decoration: none;
+}
+
 .pr-card-price {
+    color: #8ac926;
     position: absolute;
     margin-left: 10px;
     bottom: 5px;
@@ -65,14 +80,124 @@
     position: relative;
     margin: 30px 4%;
     border-radius: 10px;
-    background-color: #e8eef3;
+    background-color: #f8f9fa;
+    z-index: -1;
     
 }
+.test {
+    text-align: right;
+    width: 122%;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+    margin: -30px 0 0 -11%;
+    background-color: yellowgreen;
+    clip-path: circle(150px at 80% 20%);
+    z-index: 0;
+
+}
+
+
+.test:hover {
+    clip-path: circle(300px at 80% -20%);
+}
+
 .card-pro {
     height: 30vw;
     position: relative;
     margin: 30px 5%;
     
+}
+
+/* --------------------------- Options ---------------------------- */
+
+.options {
+    margin-top: 40px;
+    float: left;
+    width: 100%;
+    height: 53vw;
+    background-color: yellowgreen;
+}
+
+.container {
+    position: relative;
+}
+
+.opt-card-prod {
+    position: relative;
+    border-radius: 15px;
+    top: 9vw;
+    left: 20%;
+    width: 30%;
+    height: 30vw;
+    background-color: aqua;
+    z-index: 4;
+}
+
+.opt-card-image {
+    position: absolute;
+    padding-top: 45px;
+    margin-right: 50px;
+    height: 23vw;
+    z-index: 4;
+}
+
+.bg-opt-card {
+    text-align: right;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    position: absolute;
+    margin: 0;
+    background-color: white;
+    clip-path: circle(70% at 60% 130%);
+    z-index: 1;
+}
+
+.bg-opt-card:hover {
+    clip-path: circle(80% at 60% 130%);
+}
+
+.opt-card-image:hover {
+    height: 28vw;
+}
+
+    
+.opt-card-image-prod {
+    position: relative;
+    width: 100%;
+    z-index: 5;
+    margin-top: 100%;
+}
+
+
+.opt-card-info {
+    border-radius: 15px;
+    position: absolute;
+    width: 40%;
+    height: 39vw;
+    top: 7vw;
+    right: 20%;
+    background-color: #f8f9fa;
+    z-index: 1;
+    
+}
+
+h4 {
+    font-size: 1.6vw;
+    color: #8ac926;
+    position: absolute;
+    top: 15%;
+    margin-left: 30%;
+    z-index: 1;
+}
+
+.opt-card-name {
+    color: #8ac926;
+    position: absolute;
+    top: 5px;
+    margin-left: 30%;
+    z-index: 1;
 }
 
 
@@ -93,5 +218,18 @@
         font-size: 24vw;
         margin: 0 auto;
         bottom: 18vw;
+    }
+    .pr-card-image {
+        height: 83vw;
+        margin-right: 0;
+        
+    }
+    .pr-card-image:hover {
+        height: 88vw;
+    }
+    .card-pro {
+        margin: 30px 10px;
+        height: 110vw;
+        
     }
 }
