--- a/tianana-app/src/app/products/products.component.css
+++ b/tianana-app/src/app/products/products.component.css
@@ -19,13 +19,28 @@
 }
 
 .pr-card-name {
+    color: #8ac926;
     position: absolute;
     top: 5px;
     margin-left: 10px;
     z-index: 1;
 }
 
+.pr-card-share {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 1;
+}
+
+.pr-card-share a {
+    font-size: 2rem;
+    color: white;
+    text-decoration: none;
+}
+
 .pr-card-price {
+    color: #8ac926;
     position: absolute;
     margin-left: 10px;
     bottom: 5px;
@@ -36,12 +51,48 @@
     position: relative;
     margin: 30px 4%;
     border-radius: 10px;
-    background-color: #e8eef3;
+    background-color: #f8f9fa;
+    z-index: -1;
     
 }
+.test {
+    text-align: right;
+    width: 100%;
+    height: 100%;
+    margin-left: -12px;
+    border-radius: 10px;
+    position: absolute;
+    background-color: yellowgreen;
+    clip-path: circle(150px at 80% 20%);
+    z-index: 0;
+
+}
+
+
+.test:hover {
+    clip-path: circle(300px at 80% -20%);
+}
+
 .card-pro {
     height: 30vw;
     position: relative;
     margin: 30px 5%;
+    
+}
+
+@media only screen and (max-width: 770px) {
+    .pr-card-image {
+        height: 83vw;
+        margin-right: 0;
+        
+    }
+    .pr-card-image:hover {
+        height: 88vw;
+    }
+    .card-pro {
+        margin: 30px 10px;
+        height: 110vw;
+        
+    }
     
 }
