--- a/tianana-app/src/app/products/products.component.html
+++ b/tianana-app/src/app/products/products.component.html
@@ -1,15 +1,22 @@
-<div *ngFor="let product of products">
-    <div class="col col-sm-9 col-md-5 col-lg-3 card-prod float-left">
-        <div class="test"></div>   
-        <div class="card-pro">  
-            <h1 class="pr-card-bg">{{ product.name }}</h1>
-            <h2 class="pr-card-name">{{ product.name }}</h2>
-            <h2 class="pr-card-price">R$ {{ product.price}}</h2>
-            <span class="pr-card-share"><a href="/products">+</a></span>
-            <img class="pr-card-image" src="{{ product.image }}" alt="{{ product.name }}">
-        </div> 
-              
+<div>
+    <div *ngFor="let product of products" [routerLink]="['/productdetail', product.id]">
+        <div class="col col-sm-9 col-md-5 col-lg-3 card-prod float-left">
+            <div class="test"></div>   
+            <div class="card-pro">  
+                <h1 class="pr-card-bg">{{ product.name }}</h1>
+                <h2 class="pr-card-name">{{ product.name }}</h2>
+                <h2 class="pr-card-price">R$ {{ product.price}}</h2>
+                <span class="pr-card-share"><a href="/products">+</a></span>
+                <img class="pr-card-image" src="{{ product.image }}" alt="{{ product.name }}">
+            </div> 
+                  
+        </div>
     </div>
+</div>
+
+<div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
 </div>
 
 
