--- a/tianana-app/src/app/registrar/registrar.component.html
+++ b/tianana-app/src/app/registrar/registrar.component.html
@@ -4,7 +4,7 @@
             <div class="form-row">
                 <div class="col-6 col-sm-6">
                     <label for="validationCustom05">Nome</label>
-                    <input type="text" class="form-control" id="validationCustom02" [(ngModel)]="user.name" name="name" required> 
+                    <input type="text" class="form-control" id="validationCustom01" [(ngModel)]="user.firstname" name="firstname" required> 
                 </div>
                 <div class="col-6 col-sm-6">
                     <label for="validationCustom04">Sobrenome</label>
@@ -13,11 +13,11 @@
             </div>
             <div class="form-row">
                 <label for="validationCustom02">Email</label>
-                <input type="email" class="form-control" id="validationCustom02" [(ngModel)]="user.username" name="username" required> 
+                <input type="email" class="form-control" id="validationCustom03" [(ngModel)]="user.username" name="username" required> 
             </div>
             <div class="form-row">
                 <label for="validationCustom03">Senha</label>
-                <input type="password" class="form-control" id="validationCustom03" [(ngModel)]="user.password" name="password" required>
+                <input type="password" class="form-control" id="validationCustom04" [(ngModel)]="user.password" name="password" required>
             </div>
             <div class="form-row btn-login">
                 <button class="col-6 col-sm-6 btn btn-primary" type="submit">Registrar</button>
