--- a/tianana-app/src/app/home/home.component.html
+++ b/tianana-app/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 
     <div>
 
-        <div class="produtos" *ngFor="let product of products" [routerLink]="['/productdetail', product.id]">
+        <div class="produtos" *ngFor="let product of products" [routerLink]="['/productdetail', product._id]">
 
             <div class="col col-12 col-md-5 col-lg-3 card-prod float-left">
                 <div class="card-pro">
