--- a/tianana-app/src/app/products/products.component.html
+++ b/tianana-app/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div *ngFor="let product of products" [routerLink]="['/productdetail', product.id]">
+    <div *ngFor="let product of products" [routerLink]="['/productdetail', product._id]">
         <div class="col col-sm-9 col-md-5 col-lg-3 card-prod float-left">
             <div class="test"></div>   
             <div class="card-pro">  
